[package]
name = "mycodes"
version = "0.1.0"
authors = ["zhanghuaibing <617914118@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "mysql" ]
mysql = [ "sqlx/mysql"]

[dependencies.sqlx]
version = "0.4.1"
default-features = true
features = [ "runtime-actix-rustls", "macros", "chrono", "decimal", "uuid", "json" ]
[dependencies.time]
version = "0.2.7"
features = ["std"]
default-features = false

[dependencies]
actix-service = "1"
actix-web = "3"
actix-files = "0.3"
actix-session = "0.4"
actix-utils = "2"
actix-multipart = "0.3"
async-std = "1.8.0"
env_logger = "0.7"
thiserror = "1.0.20"
anyhow = "1.0"
dotenv = "0.14.1"
#log日志
log = "0.4.8"
log4rs = "0.12.0"
chrono =  { version = "0.4.15", features = ["serde"] }
serde = { version = "1.0.115", features = ["derive"] }
async-trait = "0.1.42"
serde_json = "1.0.57"

futures = "0.3.5"
pin-project = "0.4"
actix-identity = "0.3.1"
jsonwebtoken = "7.2.0"
#bcrypt = "0.9.0"
uuid = { version = "0.6.5", features = ["serde", "v4"] }
json = "*"
once_cell = "1.5.2"

lettre = {version = "0.9.2",features=["smtp-transport"]}
lettre_email = "0.9.2"
#参数校验
validator = { version = "0.12", features = ["derive"] }
